[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Romanium/entities/bather/Bather.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/FirstPersonPlayer/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Romanium/spacesboxes/space.png" type="Texture" id=3]
[ext_resource path="res://assets/Romanium/scenes/001_Intro.gd" type="Script" id=5]
[ext_resource path="res://music/Cosmosphere.ogg" type="AudioStream" id=6]
[ext_resource path="res://mp4/Swimming-Canvas.ogv" type="VideoStream" id=7]







[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="World" id=2]

[sub_resource type="PanoramaSky" id=3]
radiance_size = 1
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
background_sky_custom_fov = 132.0
background_sky_orientation = Basis( -0.190809, -0.109907, -0.975455, 0, 0.993712, -0.111965, 0.981627, -0.0213639, -0.189609 )
background_energy = 2.05
ambient_light_color = Color( 0.839216, 0.839216, 0.839216, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Space"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:environment:background_sky_rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 90, -101, 0 ), Vector3( 0, -101, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Floating"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 518, 280.845 ), Vector2( 518, 232.845 ), Vector2( 518, 313.29 ), Vector2( 508, 191.095 ) ]
}

[sub_resource type="Animation" id=8]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.01 ]
}

[node name="Spatial" type="ViewportContainer"]
material = SubResource( 1 )
margin_left = 0.215819
margin_top = 1.33032
margin_right = 1024.22
margin_bottom = 769.33
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = -0.215819
margin_top = -1.33032
margin_right = 39.7842
margin_bottom = 38.6697
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="Control"]
margin_left = -90.181
margin_top = -58.4095
margin_right = 1357.82
margin_bottom = 790.59
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
arvr = true
size = Vector2( 1280, 768 )
own_world = true
world = SubResource( 2 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="Viewport"]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="Viewport/Spatial"]
environment = SubResource( 4 )

[node name="SpaceAnimation" type="AnimationPlayer" parent="Viewport/Spatial/WorldEnvironment"]
anims/Space = SubResource( 6 )

[node name="Player" parent="Viewport/Spatial" instance=ExtResource( 2 )]
mouse_sensitivity = 0.0

[node name="Angel2" parent="." instance=ExtResource( 1 )]
position = Vector2( 508, 191.095 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Angel2"]
anims/Floating = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamBreaker" type="AnimationPlayer" parent="AudioStreamPlayer"]
anims/ChewTape = SubResource( 8 )
[connection signal="finished" from="Control/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
